[gd_scene load_steps=61 format=3 uid="uid://be1q6owgbhjxh"]

[ext_resource type="Script" path="res://assets/scripts/nucleo_04/actividad_03.gd" id="1_vohqf"]
[ext_resource type="Texture2D" uid="uid://c5q71mp4sqg8w" path="res://img/nucleo_04/fondo/linea_4_1.png" id="2_fbujb"]
[ext_resource type="Texture2D" uid="uid://c3w5o1qh0fnxx" path="res://img/nucleo_04/fondo/linea_4_2.png" id="3_xvrq2"]
[ext_resource type="Texture2D" uid="uid://c56druqvl3vsh" path="res://img/nucleo_04/fondo/linea_4_3.png" id="4_s7u8c"]
[ext_resource type="Texture2D" uid="uid://bwx107p3jnr6g" path="res://img/nucleo_04/fondo/linea_4_4.png" id="5_jx3nl"]
[ext_resource type="Texture2D" uid="uid://bvplu75a1eb5l" path="res://img/nucleo_04/fondo/linea_4_5.png" id="6_6vfl6"]
[ext_resource type="Texture2D" uid="uid://e1epbg2nxsnt" path="res://img/nucleo_04/fondo/linea_4_6.png" id="7_gp57s"]
[ext_resource type="Texture2D" uid="uid://b41xluohyy355" path="res://img/nucleo_04/fondo/linea_4_7.png" id="8_xbe5g"]
[ext_resource type="Texture2D" uid="uid://c6i1lyls62hm4" path="res://img/nucleo_04/fondo/linea_4_8.png" id="9_vpft4"]
[ext_resource type="Texture2D" uid="uid://cd2uwt81q1vct" path="res://img/nucleo_04/fondo/linea_4_9.png" id="10_uula1"]
[ext_resource type="Texture2D" uid="uid://ch6iby3cali7m" path="res://img/nucleo_04/fondo/linea_4_10.png" id="11_ey1qy"]
[ext_resource type="Texture2D" uid="uid://xx24c32ln0tj" path="res://img/nucleo_04/fondo/linea_4_11.png" id="12_pkqxw"]
[ext_resource type="Texture2D" uid="uid://ua4ctwu1kafs" path="res://img/nucleo_04/fondo/linea_4_12.png" id="13_if6ms"]
[ext_resource type="Texture2D" uid="uid://du1phe2q8hqd8" path="res://img/nucleo_04/fondo/linea_4_13.png" id="14_slrw2"]
[ext_resource type="Texture2D" uid="uid://71avbdod8f28" path="res://img/nucleo_04/fondo/linea_4_14.png" id="15_0sxfr"]
[ext_resource type="Texture2D" uid="uid://ckvnfel1uyaxa" path="res://img/nucleo_04/fondo/linea_4_15.png" id="16_u48x3"]
[ext_resource type="Texture2D" uid="uid://bnyuo4u1toud0" path="res://img/nucleo_04/fondo/linea_4_16.png" id="17_m5ybt"]
[ext_resource type="Texture2D" uid="uid://eeuoy3ik3e5j" path="res://img/nucleo_04/fondo/linea_4_17.png" id="18_hrvrs"]
[ext_resource type="Texture2D" uid="uid://t32nmwgg20be" path="res://img/nucleo_04/fondo/linea_4_18.png" id="19_ouonj"]
[ext_resource type="Texture2D" uid="uid://chdbrgxakchq0" path="res://img/nucleo_04/fondo/linea_4_19.png" id="20_y0l2l"]
[ext_resource type="Texture2D" uid="uid://i4u4j1gwsoc5" path="res://img/nucleo_04/fondo/linea_4_20.png" id="21_2o0kj"]
[ext_resource type="Texture2D" uid="uid://cmwivyrvkovmj" path="res://img/nucleo_04/fondo/linea_4_21.png" id="22_svnvx"]
[ext_resource type="Texture2D" uid="uid://bvil38w5uibxw" path="res://img/nucleo_04/fondo/linea_4_22.png" id="23_sxq7o"]
[ext_resource type="Texture2D" uid="uid://c21halvaxe3jg" path="res://img/nucleo_04/fondo/linea_4_23.png" id="24_b5ckc"]
[ext_resource type="Texture2D" uid="uid://ckbsbehsk437u" path="res://img/nucleo_04/fondo/linea_4_24.png" id="25_2dufj"]
[ext_resource type="Texture2D" uid="uid://qx8lgbgnmjo8" path="res://img/nucleo_04/fondo/linea_4_25.png" id="26_kraot"]
[ext_resource type="Texture2D" uid="uid://xeefbltyhptu" path="res://img/nucleo_04/fondo/linea_4_26.png" id="27_gfc5m"]
[ext_resource type="Texture2D" uid="uid://b2kotm8tm0f52" path="res://img/nucleo_04/fondo/linea_4_27.png" id="28_8u0em"]
[ext_resource type="Texture2D" uid="uid://cqae72675tsxh" path="res://img/nucleo_04/fondo/linea_4_28.png" id="29_jbfxl"]
[ext_resource type="Texture2D" uid="uid://d2gs8jpeowq5p" path="res://img/nucleo_04/fondo/linea_4_29.png" id="30_2dokr"]
[ext_resource type="Texture2D" uid="uid://bievnrmxeybvb" path="res://img/nucleo_04/fondo/linea_4_30.png" id="31_rcwq5"]
[ext_resource type="Texture2D" uid="uid://cnmanei7xhyv6" path="res://img/nucleo_04/fondo/linea_4_31.png" id="32_y5a6p"]
[ext_resource type="Texture2D" uid="uid://bu8o3aniallqs" path="res://img/nucleo_04/fondo/linea_4_32.png" id="33_eqi2k"]
[ext_resource type="Texture2D" uid="uid://b7a06260ou6wc" path="res://img/nucleo_04/fondo/linea_4_33.png" id="34_erilp"]
[ext_resource type="Texture2D" uid="uid://brkk1f5gfladj" path="res://img/nucleo_04/fondo/linea_4_34.png" id="35_afd4g"]
[ext_resource type="Texture2D" uid="uid://cla7xnujpt1ad" path="res://img/nucleo_04/fondo/linea_4_35.png" id="36_5xrbu"]
[ext_resource type="Texture2D" uid="uid://b0u3on5uihegf" path="res://img/nucleo_04/fondo/linea_4_36.png" id="37_7ske2"]
[ext_resource type="Texture2D" uid="uid://dm7cklv0h4n10" path="res://img/nucleo_04/fondo/linea_4_37.png" id="38_kxh8p"]
[ext_resource type="Texture2D" uid="uid://kh0rugbr74pd" path="res://img/nucleo_04/fondo/linea_4_38.png" id="39_y8duy"]
[ext_resource type="Texture2D" uid="uid://qfwvv06r0eyv" path="res://img/nucleo_04/fondo/linea_4_39.png" id="40_nvpty"]
[ext_resource type="Texture2D" uid="uid://cwntilaeg86si" path="res://img/nucleo_04/fondo/linea_4_40.png" id="41_aokyq"]
[ext_resource type="Texture2D" uid="uid://jephfs4dn1hj" path="res://img/nucleo_04/fondo/linea_4_41.png" id="42_1gx4v"]
[ext_resource type="Texture2D" uid="uid://lxclvoa3u5um" path="res://img/nucleo_04/fondo/linea_4_42.png" id="43_fjquv"]
[ext_resource type="Texture2D" uid="uid://dbsru1irfw1rl" path="res://img/nucleo_04/fondo/linea_4_43.png" id="44_7xis2"]
[ext_resource type="Texture2D" uid="uid://bqds77gskjt4f" path="res://img/nucleo_04/fondo/linea_4_44.png" id="45_ngxuh"]
[ext_resource type="Texture2D" uid="uid://bh8xns4asemlk" path="res://img/nucleo_04/fondo/linea_4_45.png" id="46_hac1u"]
[ext_resource type="Texture2D" uid="uid://cu534cbd4n1hn" path="res://img/nucleo_04/actividad_03/uno.png" id="47_6iqxr"]
[ext_resource type="PackedScene" uid="uid://sxca04083gd4" path="res://scenes/titila.tscn" id="48_hobdr"]
[ext_resource type="PackedScene" uid="uid://bsx2wekvb5qet" path="res://scenes/elementos/boton_m.tscn" id="49_7gimg"]
[ext_resource type="Texture2D" uid="uid://bmx33h5k4ifj2" path="res://img/nucleo_04/actividad_03/leonardo_iaa.png" id="49_o1wyn"]
[ext_resource type="PackedScene" uid="uid://c0pnxckwulqw5" path="res://scenes/actividades/presionar_anim.tscn" id="50_fr6ut"]
[ext_resource type="Texture2D" uid="uid://dbg76pfntiw6l" path="res://img/nucleo_04/actividad_03/dos.png" id="50_i8sad"]
[ext_resource type="AudioStream" uid="uid://c2k1bqavbkcrg" path="res://assets/sonidos/error.mp3" id="54_pfl1k"]
[ext_resource type="PackedScene" uid="uid://bgs2ty3i0fjmf" path="res://scenes/elementos/boton_s.tscn" id="182_4r48j"]

[sub_resource type="SpriteFrames" id="SpriteFrames_gf2jf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fbujb")
}, {
"duration": 1.0,
"texture": ExtResource("3_xvrq2")
}, {
"duration": 1.0,
"texture": ExtResource("4_s7u8c")
}, {
"duration": 1.0,
"texture": ExtResource("5_jx3nl")
}, {
"duration": 1.0,
"texture": ExtResource("6_6vfl6")
}, {
"duration": 1.0,
"texture": ExtResource("7_gp57s")
}, {
"duration": 1.0,
"texture": ExtResource("8_xbe5g")
}, {
"duration": 1.0,
"texture": ExtResource("9_vpft4")
}, {
"duration": 1.0,
"texture": ExtResource("10_uula1")
}, {
"duration": 1.0,
"texture": ExtResource("11_ey1qy")
}, {
"duration": 1.0,
"texture": ExtResource("12_pkqxw")
}, {
"duration": 1.0,
"texture": ExtResource("13_if6ms")
}, {
"duration": 1.0,
"texture": ExtResource("14_slrw2")
}, {
"duration": 1.0,
"texture": ExtResource("15_0sxfr")
}, {
"duration": 1.0,
"texture": ExtResource("16_u48x3")
}, {
"duration": 1.0,
"texture": ExtResource("17_m5ybt")
}, {
"duration": 1.0,
"texture": ExtResource("18_hrvrs")
}, {
"duration": 1.0,
"texture": ExtResource("19_ouonj")
}, {
"duration": 1.0,
"texture": ExtResource("20_y0l2l")
}, {
"duration": 1.0,
"texture": ExtResource("21_2o0kj")
}, {
"duration": 1.0,
"texture": ExtResource("22_svnvx")
}, {
"duration": 1.0,
"texture": ExtResource("23_sxq7o")
}, {
"duration": 1.0,
"texture": ExtResource("24_b5ckc")
}, {
"duration": 1.0,
"texture": ExtResource("25_2dufj")
}, {
"duration": 1.0,
"texture": ExtResource("26_kraot")
}, {
"duration": 1.0,
"texture": ExtResource("27_gfc5m")
}, {
"duration": 1.0,
"texture": ExtResource("28_8u0em")
}, {
"duration": 1.0,
"texture": ExtResource("29_jbfxl")
}, {
"duration": 1.0,
"texture": ExtResource("30_2dokr")
}, {
"duration": 1.0,
"texture": ExtResource("31_rcwq5")
}, {
"duration": 1.0,
"texture": ExtResource("32_y5a6p")
}, {
"duration": 1.0,
"texture": ExtResource("33_eqi2k")
}, {
"duration": 1.0,
"texture": ExtResource("34_erilp")
}, {
"duration": 1.0,
"texture": ExtResource("35_afd4g")
}, {
"duration": 1.0,
"texture": ExtResource("36_5xrbu")
}, {
"duration": 1.0,
"texture": ExtResource("37_7ske2")
}, {
"duration": 1.0,
"texture": ExtResource("38_kxh8p")
}, {
"duration": 1.0,
"texture": ExtResource("39_y8duy")
}, {
"duration": 1.0,
"texture": ExtResource("40_nvpty")
}, {
"duration": 1.0,
"texture": ExtResource("41_aokyq")
}, {
"duration": 1.0,
"texture": ExtResource("42_1gx4v")
}, {
"duration": 1.0,
"texture": ExtResource("43_fjquv")
}, {
"duration": 1.0,
"texture": ExtResource("44_7xis2")
}, {
"duration": 1.0,
"texture": ExtResource("45_ngxuh")
}, {
"duration": 1.0,
"texture": ExtResource("46_hac1u")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="Gradient" id="Gradient_1rer6"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_k0fi8"]
gradient = SubResource("Gradient_1rer6")
fill_to = Vector2(1, 1)

[sub_resource type="Animation" id="Animation_gnj6h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ycynb"]
resource_name = "mal"
length = 0.4667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.3, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0.815686, 0.0509804, 0, 0.647059), Color(0.815686, 0.0509804, 0, 0.647059), Color(0.815686, 0.0509804, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ph5j"]
_data = {
"RESET": SubResource("Animation_gnj6h"),
"mal": SubResource("Animation_ycynb")
}

[node name="Actividad03" type="Node2D"]
script = ExtResource("1_vohqf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.309385, 0.309385, 0.309385, 1)
scale = Vector2(3.42857, 3.78095)
sprite_frames = SubResource("SpriteFrames_gf2jf")
centered = false

[node name="Uno" type="Sprite2D" parent="."]
position = Vector2(966, 541)
texture = ExtResource("47_6iqxr")

[node name="RojoMal" type="Button" parent="Uno"]
modulate = Color(1, 1, 1, 0)
offset_left = -104.0
offset_top = -19.0
offset_right = 140.0
offset_bottom = 215.0

[node name="VerdeMal" type="Button" parent="Uno"]
modulate = Color(1, 1, 1, 0)
offset_left = 471.0
offset_top = -19.0
offset_right = 700.0
offset_bottom = 217.0

[node name="Titila" parent="." instance=ExtResource("48_hobdr")]
position = Vector2(267, 473)
scale = Vector2(0.736077, 1.58411)
color = Color(0.615686, 0.0313726, 0.909804, 1)

[node name="LeonardoIa" type="Sprite2D" parent="."]
position = Vector2(420, 642)
texture = ExtResource("49_o1wyn")

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 300.0
offset_top = 521.0
offset_right = 542.0
offset_bottom = 762.0

[node name="Dos" type="Sprite2D" parent="."]
visible = false
position = Vector2(967, 541)
texture = ExtResource("50_i8sad")

[node name="Titila2" parent="." instance=ExtResource("48_hobdr")]
visible = false
position = Vector2(733, 658)
scale = Vector2(1.02179, 0.495327)
color = Color(0.615686, 0.0313726, 0.909804, 1)

[node name="BotonM" parent="." instance=ExtResource("49_7gimg")]
visible = false
offset_left = 759.0
offset_top = 681.0
offset_right = 1123.0
offset_bottom = 749.0
color = Color(0.615686, 0.0313726, 0.909804, 1)
texto = "SOLICITAR DESCRIPCIÓN"

[node name="Presionar" parent="." instance=ExtResource("50_fr6ut")]
modulate = Color(0.615686, 0.0313726, 0.909804, 1)

[node name="Titila3" parent="." instance=ExtResource("48_hobdr")]
visible = false
position = Vector2(904, 848)
scale = Vector2(0.394673, 0.35514)
color = Color(0.615686, 0.0313726, 0.909804, 1)

[node name="BotonS" parent="." instance=ExtResource("182_4r48j")]
visible = false
offset_left = 920.0
offset_top = 863.0
offset_right = 1048.0
offset_bottom = 908.0
color = Color(0.615686, 0.0313726, 0.909804, 1)
texto = "ENVIAR"

[node name="Mal" type="Sprite2D" parent="."]
visible = false
position = Vector2(960.5, 539.5)
scale = Vector2(30.4844, 17.3594)
texture = SubResource("GradientTexture2D_k0fi8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Mal"]
libraries = {
"": SubResource("AnimationLibrary_8ph5j")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("54_pfl1k")
volume_db = 0.5

[connection signal="button_down" from="Uno/RojoMal" to="." method="_on_rojo_mal_button_down"]
[connection signal="button_down" from="Uno/VerdeMal" to="." method="_on_verde_mal_button_down"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="BotonM" to="." method="_on_boton_m_button_down"]
[connection signal="button_down" from="BotonS" to="." method="_on_boton_s_button_down"]
[connection signal="animation_finished" from="Mal/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
